--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ nav a:hover, nav a:focus{
 /* Step 5: Write selector/rule property to add the background image to the 
 first div in the grid  and place it in the grid. */
 .container > *:first-child{
-     background-image: url("/images/header.jpg");
+     background-image: url("../images/header.jpg");
      background-attachment: fixed; 
      background-position: center; 
      background-repeat: no-repeat;
@@ -118,7 +118,7 @@ first div in the grid  and place it in the grid. */
  /* Step 13:Write the selector/rule property to update the .text-block class */
      .text-block{
           max-height: 250px;
-          overflow: auto;
+          overflow: scroll;
      }
 
 }
