--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ first div in the grid  and place it in the grid. */
 
 
   /* Steps 11 and 12: Update the grid-column property of the grid's children (where-needed)*/
-     .about, .clients, .method-image, .clients-image{
+     .about, .clients, .method-image, .contact-image{
           grid-column: 3 / span 2;
      }
 
